Fixed a bunch of things with layout on tablet and mobile

--- a/css/style.css
+++ b/css/style.css
@@ -25,12 +25,14 @@ html, body{
 .mobile-top-table{
     border-collapse: separate;
     border-spacing:1em;
+    text-align: center;
 }
 
 .mobile-top-table-td{
     width:30%;
     box-shadow: 1px 1px 8px rgba(0,0,0,0.3);
     height:3em;
+    text-align: center;
 }
 
 .top-table td{
@@ -130,4 +132,10 @@ html, body{
     text-align: left;
     width:100%;
     background:white;
+}
+
+#wrapper{
+    width: 100%;
+    height: 100%;
+    overflow: scroll;
 }
